Changed some styles, fixed script for slicing too long post content, completely finished view_ann panel

--- a/sass/_small.scss
+++ b/sass/_small.scss
@@ -3,18 +3,26 @@
 		font-size: 50%;
 	}
 
+	.dashboard,
+	.ann-editor,
+	.show-ann {
+		&__heading {
+			margin: 3.6rem 0 2rem;
+			font-size: 3rem;
+		}
+	}
+
 	.header {
 		width: 35rem;
 	}
 
 	.dashboard {
-		&__heading {
-			margin: 3.6rem 0 2rem;
-			font-size: 3rem;
-		}
-
 		&__container {
 			grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
 		}
+	}
+
+	.ann-editor {
+		margin: 1rem 0;
 	}
 }
